--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
+  "version": 2,
+  "builds": [
+      {
+          "src": "./index.js",
+          "use": "@vercel/node"
+      }
+  ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "https://challenge-pin-app-kchx.vercel.app/api/$1"
-    }
+      {
+          "src": "/(.*)",
+          "dest": "/"
+      }
   ]
 }
