--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,14 @@
 {
-  "version": 2,
+  "functions": {
+    "api/server.js": {
+      "memory": 1024,
+      "includeFiles": "db.json"
+    }
+  },
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "/api/json-server.ts"
+      "source": "/(.*)",
+      "destination": "api/server.js"
     }
   ]
 }
