--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,9 @@
 {
   "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "package.json",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "next.config.js",
-      "use": "@vercel/next"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/jsonServer.ts"
+      "source": "/api/:path*",
+      "destination": "/api/jsonServer.ts"
     }
   ]
 }
