--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "express": "^4.21.2",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.469.0",
     "next": "15.1.4",
