--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "functions": {
-    "api/json-server": {
+    "api/json-server.js": {
       "runtime": "nodejs18.x",
       "includeFiles": "db.json"
     }
@@ -9,7 +9,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "/api/json-server"
+      "destination": "/api/json-server.ts"
     }
   ]
 }
