--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "/api/json-server.ts"
+      "destination": "/api/json-server.cjs"
     }
   ]
 }
