--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
   "version": 2,
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "/api/json-server.cjs"
-    }
+  "routes": [
+    { "src": "/api/json-server", "dest": "/api/json-server.cjs" }
   ]
 }
