--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,14 @@
 {
-  "version": 2
+  "functions": {
+    "api/server.js": {
+      "memory": 1024,
+      "includeFiles": "db.json"
+    }
+  },
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "api/json-server.js"
+    }
+  ]
 }
