--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "challenge-pinapp",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "node api/json-server.js",
     "lint": "next lint",
     "json-server": "json-server --watch db.json --port 3001"
   },
@@ -16,7 +17,6 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cors": "^2.8.5",
     "express": "^4.21.2",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.469.0",
