--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clsx": "^2.1.1",
     "express": "^4.21.2",
     "json-serve": "^0.1.0",
-    "json-server": "^^0.17.3",
+    "json-server": "^0.14.7",
     "lucide-react": "^0.469.0",
     "next": "15.1.4",
     "react": "^19.0.0",
