--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "challenge-pinapp",
   "version": "0.1.0",
   "private": true,
-  "main": "index.js",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "node api/json-server.js",
+    "start": "next start",
     "lint": "next lint",
     "json-server": "json-server --watch db.json --port 3001"
   },
@@ -18,8 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "express": "^4.21.2",
-    "json-serve": "^0.1.0",
-    "json-server": "^0.14.7",
+    "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.469.0",
     "next": "15.1.4",
     "react": "^19.0.0",
