--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "express": "^4.21.2",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "^0.17.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.4",
     "react": "^19.0.0",
