--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,19 @@
 {
-  "functions": {
-    "api/json-server.js": {
-      "memory": 1024,
-      "includeFiles": "db.json"
+  "version": 2,
+  "builds": [
+    {
+      "src": "next.config.js",
+      "use": "@vercel/next"
+    },
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
     }
-  },
+  ],
   "rewrites": [
     {
-      "source": "/(.*)",
-      "destination": "api/json-server.js"
+      "source": "/api/:path*",
+      "destination": "/server.js"
     }
   ]
 }
