--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,8 @@
       "source": "/api/:path*",
       "destination": "/api/:path*"
     }
+  ],
+  "routes": [
+    {"src": "api/server", "dest": "api/server.js"}
   ]
 }
