--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,15 @@
 {
   "version": 2,
-  "rewrites": [
+  "builds": [
     {
-      "source": "/api/:path*",
-      "destination": "/api/:path*"
+      "src": "api/server.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
-    {"src": "api/server", "dest": "api/server.js"}
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/server.js"
+    }
   ]
 }
