--- a/vercel.json
+++ b/vercel.json
@@ -7,12 +7,8 @@
   },
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "api/(.*)",
       "destination": "api/server.js"
-    },
-    {
-     "source": "product/:id",
-      "destination": "product/:id"
     }
   ]
 }
