--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,12 @@
   },
   "rewrites": [
     {
-      "source": "api/(.*)",
-      "destination": "api/server.js"
+      "source": "/api/*",
+      "destination": "/$1"
+    },
+    {
+      "source": "/product/:sku",
+      "destination": "/product/:sku"
     }
   ]
 }
