--- a/vercel.json
+++ b/vercel.json
@@ -7,12 +7,8 @@
   },
   "rewrites": [
     {
-      "source": "/api/*",
-      "destination": "/$1"
-    },
-    {
-      "source": "/product/:sku",
-      "destination": "/product/:sku"
+      "source": "/(.*)",
+      "destination": "api/server.js"
     }
   ]
 }
